adding tasks from the list by drag and drop

--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,4 +1,4 @@
-<mat-card class="day-card">
+<mat-card class="day-card" cdkDropList (cdkDropListDropped)="drop($event)">
   <mat-card-header>
     <mat-card-title>
       {{ dayName }}
