--- a/src/app/repeated-tasks/repeated-tasks.component.html
+++ b/src/app/repeated-tasks/repeated-tasks.component.html
@@ -1,6 +1,18 @@
-<div cdkDropList class="repeated-tasks" (cdkDropListDropped)="drop($event)">
-  <div class="repeated-task" *ngFor="let repeatedTask of repeatedTasks" cdkDrag>
-    <span class="repeated-name">{{ repeatedTask.name }}</span>
+<div
+  cdkDropList
+  class="repeated-tasks"
+  (cdkDropListExited)="test($event)"
+  (cdkDropListDropped)="drop($event)"
+>
+  <div
+    class="repeated-task"
+    *ngFor="let repeatedTask of repeatedTasks"
+    cdkDrag
+    [cdkDragDisabled]="repeatedTask.disabled"
+  >
+    <span class="repeated-name" data-id="{{ repeatedTask.id }}">{{
+      repeatedTask.name
+    }}</span>
     <span class="repeated-repetitions">{{ repeatedTask.repetitions }}</span>
   </div>
 </div>
