--- a/src/app/repeated-tasks/repeated-tasks.component.html
+++ b/src/app/repeated-tasks/repeated-tasks.component.html
@@ -1,7 +1,7 @@
 <div
   cdkDropList
   class="repeated-tasks"
-  (cdkDropListExited)="test($event)"
+  (cdkDropListExited)="taskMoved($event)"
   (cdkDropListDropped)="drop($event)"
 >
   <div
